@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Icmake V 9.02.04</title>
+<title>Icmake V 9.02.06</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -17,10 +17,10 @@
 </head>
 <body>
 <hr/>
-<h1 id="title">Icmake V 9.02.04</h1>
+<h1 id="title">Icmake V 9.02.06</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
-<h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">1992-2017</h2>
+<h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">1992-2018</h2>
 
 
 <p>
@@ -39,16 +39,16 @@ by its tag or download the matching <code >.zip</code> or <code >.tar.gz</code> 
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.06">9.02.06</a>
+Feb 08, 2018;
+        <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.05">9.02.05</a>
+Jan 25, 2018;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.04">9.02.04</a>
 Dec 28, 2017;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.03">9.02.03</a>
 Nov 02, 2017;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.02">9.02.02</a>
-Nov 01, 2016;
-        <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.02.00">9.02.00</a>
-Sep 29, 2016;
-        <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.01.00">9.01.00</a>
-Sep 03, 2016.
+Nov 01, 2016.
         </ul>
     
 <p>
