@@ -16,8 +16,8 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmconf(7)</h1>
-<h2 id="author">configuration file for <strong >icmbuild</strong>(1)<br/>(icmake.9.02.04.tar.gz)</h2>
-<h2 id="date">1992-2017</h2>
+<h2 id="author">configuration file for <strong >icmbuild</strong>(1)<br/>(icmake.9.02.06.tar.gz)</h2>
+<h2 id="date">1992-2018</h2>
 
 
 <p>
@@ -37,7 +37,6 @@ program maintenance for other languages (e.g., <strong >C</strong>) can also eas
 configured.
 <p>
 The <strong >icmbuild</strong>(1) script ignores empty lines and lines whose first non-blank
-character is a hash-mark (<em >#</em>) as well as lines whose first non-blank
 characters are two consecutive forward slashes (//). Long lines can be split
 over multiple lines by using a final backslash character at lines continuing
 at the next line (refer to the <strong >icmake</strong>(1) man-page for further details).
