@@ -16,8 +16,8 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmstart(1)</h1>
-<h2 id="author">starts icmbuild program maintenance<br/>(icmake.9.02.04.tar.gz)</h2>
-<h2 id="date">1992-2017</h2>
+<h2 id="author">starts icmbuild program maintenance<br/>(icmake.9.02.06.tar.gz)</h2>
+<h2 id="date">1992-2018</h2>
 
 
 <p>
