@@ -1,3 +1,15 @@
+icmake (9.02.06)
+
+  * Fixed icmbuild's install command wrt installing libraries
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 31 Jan 2018 16:17:49 +0100
+
+icmake (9.02.05)
+
+  * Removed an error (#-lines are comment) in the icmconf(7) man-page
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 25 Jan 2018 09:05:47 +0100
+
 icmake (9.02.04)
 
   * DEFCOM lines are not anymore appended to existing 'icmconf' files if its
